# rust-playground

./: .gitignore  LICENSE  README.md
02.hello_cargo/hello_cargo/: Cargo.toml
03.guessing_game/guessing_game/: Cargo.toml
03.guessing_game/guessing_game/src/: main.rs
04.variables/shadow/: Cargo.toml
04.variables/shadow/src/: main.rs
04.variables/variables/: Cargo.toml
04.variables/variables/src/: main.rs
05.loops/: for_range.rs  loop_iterator.rs  return_loop.rs
05.numeric_operations/numeric_operations/: Cargo.toml
05.numeric_operations/numeric_operations/src/: main.rs
06.tuple/tuple/: Cargo.toml
06.tuple/tuple/src/: main.rs
07.functions/function/: Cargo.toml
07.functions/function/src/: main.rs
08.loops/: infinite_loop.rs  while_before.rs
09.structs/rectangle02/rectangle02/: Cargo.toml
09.structs/rectangle02/src/: main.rs
09.structs/structs/: Cargo.toml
09.structs/structs/src/: main.rs
10.enums/enum01/: Cargo.toml
10.enums/enum01/src/: main.rs
11.packages/restaurant/: Cargo.toml
11.packages/restaurant/src/: front_of_house.rs  lib.rs
12.collections/collections/src/: main.rs
12.collections/hashmap/: Cargo.toml
12.collections/hashmap/src/: main.rs
12.collections/strings/: Cargo.toml
12.collections/strings/src/: main.rs
12.collections/vector/: Cargo.toml
13.error_handling/recoverable_1/: Cargo.toml
13.error_handling/recoverable_1/src/: main.rs
13.error_handling/recoverable_2/: Cargo.toml
13.error_handling/recoverable_3/: Cargo.toml
13.error_handling/recoverable_4/: Cargo.toml
13.error_handling/recoverable_4/src/: main.rs
13.error_handling/unrecoverable/: Cargo.toml
13.error_handling/unrecoverable/src/: main.rs
14.generic_traits_lifetime/generic/: Cargo.toml
14.generic_traits_lifetime/generic/src/: main.rs
14.generic_traits_lifetime/traits/: Cargo.toml
14.generic_traits_lifetime/traits/src/: lib.rs
15.tests/adder/: Cargo.toml
15.tests/adder/src/: lib.rs
16.command_line/minigrep/: Cargo.toml
16.command_line/minigrep/src/: lib.rs  main.rs
17.cargo/add/add-one/: Cargo.toml
17.cargo/add/add-one/src/: lib.rs
17.cargo/add/adder/: Cargo.toml
18.concurrence/concurrence_1/: Cargo.toml
18.concurrence/concurrence_1/src/: main.rs
18.concurrence/concurrence_2/: Cargo.toml
18.concurrence/concurrence_2/src/: main.rs
18.concurrence/concurrence_channels/: Cargo.toml
18.concurrence/concurrence_channels_2/: Cargo.toml
18.concurrence/concurrence_channels_2/src/: main.rs
18.concurrence/concurrence_channels_3/: Cargo.toml
18.concurrence/concurrence_channels_3/src/: main.rs
18.concurrence/mutex_1/: Cargo.toml
18.concurrence/mutex_1/src/: main.rs
19.webserver/hello/: 404.html  Cargo.toml  hello.html
19.webserver/hello/src/: lib.rs  main.rs
bitbucket_client/: Cargo.toml
bitbucket_client/src/: main.rs
const_check/: Cargo.toml
const_check/src/: main.rs
curl_poc/: Cargo.toml  Cross.toml  cross-compile.sh
curl_poc/src/: main.rs
diesel_demo/: .env  Cargo.toml  customer.db
diesel_demo/migrations/2020-04-12-184858_create_posts/: up.sql
diesel_demo/src/: lib.rs  models.rs
env_test/: Cargo.toml
env_test/src/: main.rs
exercises/01.farenheit_to_celsius/: Cargo.toml
exercises/01.farenheit_to_celsius/src/: main.rs
exercises/02.fibonacci/: Cargo.toml
exercises/02.fibonacci/src/: main.rs
exercises/03.twelve_days_of_christmas/: Cargo.toml
exercises/03.twelve_days_of_christmas/src/: main.rs
ffi_nbus/: Cargo.toml  build.rs  wrapper.h
ffi_nbus/src/: main.rs  nbus_listener.rs
files/: Cargo.toml  README.md
files/src/: main.rs
flexi_logger/: Cargo.toml  README.md
flexi_logger/src/: main.rs
heap_priority_queue/: Cargo.toml
heap_priority_queue/src/: main.rs
hello_mipsel/: Cargo.toml
jammdb_poc/: .gitignore  README.md
jammdb_poc/reader/: Cargo.toml
jammdb_poc/reader/src/: main.rs
jammdb_poc/writer/: Cargo.toml
jammdb_poc/writer/src/: main.rs
knapsack/: Cargo.toml  README.md
knapsack/src/: main.rs
list_path/: Cargo.toml  README.md
list_path/src/: main.rs
loop_hex/: Cargo.toml  README.md
loop_hex/src/: main.rs
metered/: Cargo.toml
metered/src/: main.rs
mqtt_poc/: Cargo.toml  README.md
mqtt_poc/src/: main.rs
paho_mqtt_poc/: Cargo.toml  Cross.toml  Dockerfile
paho_mqtt_poc/src/: main.rs
pickledb_dump/: .gitignore  Cargo.toml
pickledb_dump/src/: main.rs  shadow.rs  storage.rs
pnet_poc/: Cargo.toml
pnet_poc/src/: main.rs
quarentine/: Cargo.toml  README.md
quarentine/src/: main.rs
reqwest_multipart/: Cargo.toml  README.md
reqwest_multipart/src/: main.rs
reqwest_serde_poc/: Cargo.toml
reqwest_serde_poc/src/: main.rs
rocksdb_poc/: Cargo.toml  README.md
rocksdb_poc/src/: main.rs
serde_json_poc/: Cargo.toml  shadow.json
serde_json_poc/src/: main.rs  structs.rs
targz_poc/: Cargo.toml  teste1.txt
targz_poc/src/: main.rs
timestamp_poc/: Cargo.toml
timestamp_poc/src/: main.rs
tokio_threads/: Cargo.toml  README.md
tokio_threads/src/: main.rs
vec_poc/: Cargo.toml
vec_poc/src/: main.rs
version_compare_poc/: Cargo.toml
version_compare_poc/src/: main.rs
