[package]
name = "bitbucket_client"
version = "0.1.0"
authors = ["Tales Bitelo Viegas <selatotal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = {version = "3.0.0-alpha.9"}
webbrowser = "0.5.2"
url = "2.1.1"
reqwest = { version = "0.10.4", features = ["blocking"] }