[package]
name = "ffi_nbus"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
pretty_env_logger = "0.3"
log = "0.4"

[build-dependencies]
bindgen = "0.52.0"
cc = "1.0"
