[package]
name = "metered"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metered = "0.3.0"
serde_yaml = "0.8.11"
rand = "0.7.3"
serde = "1.0.104"