[package]
name = "paho_mqtt_poc"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", features=["build_bindgen", "ssl"] }
futures = "0.3.1"
log = "0.4"
pretty_env_logger = "0.3"
