[package]
name = "paho_mqtt_poc"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.1", features = ["bundled", "ssl", "vendored-ssl"] }
futures = "0.3.19"
log = { version = "0.4", features = ["max_level_trace"] }
pretty_env_logger = "0.5.0"
