[package]
name = "pickedb_dump"
version = "0.1.0"
edition = "2021"
authors = ["Tales Viegas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pickledb = { version = "0.5.1", features = ["bincode"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
num-derive = "0.3"
num-traits = "0.2"
uuid = { version = "1.2.1", default-features = false, features = ["v4","serde"] }
