[package]
name = "reqwest_multipart"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", default-features = false, features = [ "blocking", "json" ] }
uuid = { version = "0.8", default-features = false, features = [ "v4" ] }
chrono = "0.4.10"
