[package]
name = "rocksdb_poc"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { version = "0.13", features = ["zstd"] }
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
