[package]
name = "serde_json_poc"
version = "0.1.0"
authors = ["Tales Viegas <selatotal@gmail.com>"]
edition = "2018"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
uuid = { version = "0.8", default-features = false, features = [ "v4" ] }
