[package]
name = "writer"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jammdb = "0.2.0"
serde = {version = "1.0", features = ["derive"]}
rmp-serde = "0.14.3"